FIX Aligning of labels

--- a/assets/content.css
+++ b/assets/content.css
@@ -1,3 +1,7 @@
+.issue-info-container {
+  flex-wrap: wrap;
+}
+
 .labels {
     display: table;
     table-layout: fixed;
